TestSuite/errors/err0179.pas
var arr : array[,] of real;
begin
arr[2][3] := 5;
end.